force-app/main/default/objects/Activity/fields/Assigned_to_Brand_Captain__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Brand_Captain__c</fullName>
    <formula>Owner:User.Brand_Captain__c</formula>
    <label>Assigned to Brand Captain</label>
    <type>Checkbox</type>
</CustomField>