force-app/main/default/objects/Activity/fields/Assigned_to_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Full_Name__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
    <label>Assigned to Full Name</label>
    <type>Text</type>
</CustomField>