force-app/main/default/objects/Activity/fields/Auto_Create_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate whether tasks should be created automatically as a result of recording a Remerchandise Activity against a B2B Event.</description>
    <label>Auto Create Tasks</label>
    <type>Checkbox</type>
</CustomField>