force-app/main/default/objects/Activity/fields/Chatter_Post_id__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Post_id__c</fullName>
    <label>Chatter Post id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>