force-app/main/default/objects/Activity/fields/Date_Time_B2B_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_B2B_Posted__c</fullName>
    <description>Populated by workflow rule when &quot;share and post&quot; is set to true</description>
    <label>Date/Time B2B Posted</label>
    <type>DateTime</type>
</CustomField>