force-app/main/default/objects/Activity/fields/Event_Department__c.field-meta.xml
<CustomField>
    <fullName>Event_Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leasing/Commercialisation</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Combined Retail &amp; Leasing</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>