force-app/main/default/objects/Activity/fields/Event_Headline__c.field-meta.xml
<CustomField>
    <fullName>Event_Headline__c</fullName>
    <label>Meeting Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>