force-app/main/default/objects/Activity/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meeting Confirmed</fullName>
                <default>true</default>
                <label>Meeting Confirmed</label>
            </value>
            <value>
                <fullName>Meeting Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>