force-app/main/default/objects/Activity/fields/Follow_Up_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Assignee__c</fullName>
    <description>[beta] Used for searching for a single user to assign the resultant tasks to</description>
    <inlineHelpText>Please enter the name of the person who will be assigned the follow up tasks. If a unique user is not found then the tasks will be assigned to the meeting creator. You can use an asterisk character to perform a wildcard search.</inlineHelpText>
    <label>Follow Up Assignee</label>
    <length>55</length>
    <type>Text</type>
</CustomField>