force-app/main/default/objects/Activity/fields/Follow_Up_Due_date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Due_date__c</fullName>
    <description>value is passed through into the Tasks</description>
    <label>Follow Up Due date</label>
    <type>Date</type>
</CustomField>