force-app/main/default/objects/Activity/fields/Linked_to_object__c.field-meta.xml
<CustomField>
    <fullName>Linked_to_object__c</fullName>
    <description>Created specifically for Mobile listings page to overcome limitation of query syntax using Remote Objects.</description>
    <formula>IF( ISBLANK( WhatId ) , false, true)</formula>
    <label>Linked to object</label>
    <type>Checkbox</type>
</CustomField>