force-app/main/default/objects/Activity/fields/Meeting_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Lead_Time__c</fullName>
    <description>How long before the meeting took place was the meeting logged</description>
    <formula>ActivityDate - DATEVALUE( CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How long before the meeting took place was the meeting logged</inlineHelpText>
    <label>Meeting Lead Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>