force-app/main/default/objects/Activity/fields/Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Status__c</fullName>
    <formula>IF( Share__c = false, &quot;Meeting Logged&quot;,  &quot;Report Shared&quot;)</formula>
    <label>Meeting Status</label>
    <type>Text</type>
</CustomField>