force-app/main/default/objects/Activity/fields/Non_VR_Outlet_Full_Price_Performance__c.field-meta.xml
<CustomField>
    <fullName>Non_VR_Outlet_Full_Price_Performance__c</fullName>
    <label>Non-VR Outlet &amp; Full Price Performance</label>
    <type>TextArea</type>
</CustomField>