force-app/main/default/objects/Activity/fields/Old_Instance_Activity_Assigned_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Instance_Activity_Assigned_To_ID__c</fullName>
    <description>The User ID in Old Salesforce to which this activity was assigned.

Used for data migration from old salesforce to VR1</description>
    <externalId>true</externalId>
    <label>Old Instance Activity Assigned To ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>