force-app/main/default/objects/Activity/fields/Old_Instance_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Instance_Activity_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The ID of the imported record from OLD salesforce. Used for Data Migtration</description>
    <externalId>true</externalId>
    <label>Old Instance Activity ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>