force-app/main/default/objects/Activity/fields/Opportunity_Village__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Village__c</fullName>
    <description>When an Event is created from an Opportunity, the associated village is stamped onto the Event using a trigger. This field is purely for technical processing and not exposed on the UI.</description>
    <inlineHelpText>When an Event is created from an Opportunity, the associated village is stamped onto the Event using a trigger. This field is purely for technical processing and not exposed on the UI.</inlineHelpText>
    <label>Opportunity Village</label>
    <length>100</length>
    <type>Text</type>
</CustomField>