force-app/main/default/objects/Activity/fields/Outreach_Automation__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Automation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outreach Automation</label>
    <referenceTo>PRX__Outreach_Automation__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>