force-app/main/default/objects/Activity/fields/Outreach_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Message_ID__c</fullName>
    <label>Outreach Message ID</label>
    <type>TextArea</type>
</CustomField>