force-app/main/default/objects/Activity/fields/Owner_or_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Owner_or_Attendee__c</fullName>
    <formula>IF (IsChild = true, &quot;Attendee&quot;, &quot;Owner&quot;)</formula>
    <label>Owner or Attendee</label>
    <type>Text</type>
</CustomField>