force-app/main/default/objects/Activity/fields/PI_Inbound__c.field-meta.xml
<CustomField>
    <fullName>PI_Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PI Inbound</label>
    <type>Checkbox</type>
</CustomField>