force-app/main/default/objects/Activity/fields/PI_Outreach_Read__c.field-meta.xml
<CustomField>
    <fullName>PI_Outreach_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PI Outreach Read</label>
    <type>Checkbox</type>
</CustomField>