force-app/main/default/objects/Activity/fields/PI_Type__c.field-meta.xml
<CustomField>
    <fullName>PI_Type__c</fullName>
    <label>PI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>