force-app/main/default/objects/Activity/fields/PRXC__Outreach_Delivered__c.field-meta.xml
<CustomField>
    <fullName>PRXC__Outreach_Delivered__c</fullName>
    <inlineHelpText>The time the SMS/Email was delivered to the recipient.</inlineHelpText>
    <label>Outreach Delivered</label>
    <type>DateTime</type>
</CustomField>