force-app/main/default/objects/Activity/fields/PRXC__Outreach_Error__c.field-meta.xml
<CustomField>
    <fullName>PRXC__Outreach_Error__c</fullName>
    <inlineHelpText>The time the SMS/Email was reported as failed.</inlineHelpText>
    <label>Outreach Error</label>
    <type>DateTime</type>
</CustomField>