force-app/main/default/objects/Activity/fields/PRXC__Outreach_Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>PRXC__Outreach_Error_Reason__c</fullName>
    <inlineHelpText>The error message supplied for a failed outreach SMS/Email.</inlineHelpText>
    <label>Outreach Error Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>