force-app/main/default/objects/Activity/fields/PRXC__Outreach_Opened__c.field-meta.xml
<CustomField>
    <fullName>PRXC__Outreach_Opened__c</fullName>
    <inlineHelpText>The time the SMS/Email was opened/read by the recipient.</inlineHelpText>
    <label>Outreach Opened</label>
    <type>DateTime</type>
</CustomField>