force-app/main/default/objects/Activity/fields/PRXC__Outreach_Status__c.field-meta.xml
<CustomField>
    <fullName>PRXC__Outreach_Status__c</fullName>
    <label>Outreach Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>