force-app/main/default/objects/Activity/fields/PRXC__Outreach_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>PRXC__Outreach_Template_Name__c</fullName>
    <label>Outreach Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>