force-app/main/default/objects/Activity/fields/PRXC__Outreach_Time__c.field-meta.xml
<CustomField>
    <fullName>PRXC__Outreach_Time__c</fullName>
    <label>Outreach Time</label>
    <type>DateTime</type>
</CustomField>