force-app/main/default/objects/Activity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Performance Review - Group</fullName>
            </value>
            <value>
                <fullName>Performance Review - Village</fullName>
            </value>
            <value>
                <fullName>Remerchandising - Group</fullName>
            </value>
            <value>
                <fullName>Remerchandising - Village</fullName>
            </value>
            <value>
                <fullName>Introduction to VR</fullName>
            </value>
            <value>
                <fullName>Marketing meeting</fullName>
                <label>Marketing Meeting</label>
            </value>
            <value>
                <fullName>Marketing &amp; Retail</fullName>
            </value>
            <value>
                <fullName>30/60/90 Day Plan</fullName>
            </value>
            <value>
                <fullName>Brand Relationship</fullName>
            </value>
            <value>
                <fullName>Brand Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>