force-app/main/default/objects/Activity/fields/Related_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Related_Meeting__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + Related_Meeting_ID__c , &quot;B2B Meeting&quot;)</formula>
    <label>Related Meeting</label>
    <type>Text</type>
</CustomField>