force-app/main/default/objects/Activity/fields/Related_Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Meeting_ID__c</fullName>
    <description>The ID of the meeting that this task was created from

Not directly visible to users - the URL will be</description>
    <label>Related Meeting ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>