force-app/main/default/objects/Activity/fields/Related_To_Id_for_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Id_for_Calendar__c</fullName>
    <label>Related To Id for Calendar</label>
    <length>200</length>
    <type>Text</type>
</CustomField>