force-app/main/default/objects/Activity/fields/Related_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Name__c</fullName>
    <label>Related To (Name)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>