force-app/main/default/objects/Activity/fields/Remerchandising_Activity__c.field-meta.xml
<CustomField>
    <fullName>Remerchandising_Activity__c</fullName>
    <description>Singular - 
Used for the TASK (not event)</description>
    <label>Remerchandising Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Downsize</fullName>
            </value>
            <value>
                <fullName>Follow Up Action</fullName>
            </value>
            <value>
                <fullName>New Contract</fullName>
            </value>
            <value>
                <fullName>Pop Up</fullName>
            </value>
            <value>
                <fullName>Rebrand</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Shop Refit</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Upsize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>