force-app/main/default/objects/Activity/fields/Retail_Live__c.field-meta.xml
<CustomField>
    <fullName>Retail_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether task is related to a Retail LIVE communication.</description>
    <inlineHelpText>Indicate whether task is related to a Retail LIVE communication.</inlineHelpText>
    <label>Retail Live</label>
    <type>Checkbox</type>
</CustomField>