force-app/main/default/objects/Activity/fields/Retail_Live_From__c.field-meta.xml
<CustomField>
    <fullName>Retail_Live_From__c</fullName>
    <label>Retail Live From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>