force-app/main/default/objects/Activity/fields/Retail_Live_Reply__c.field-meta.xml
<CustomField>
    <fullName>Retail_Live_Reply__c</fullName>
    <label>Retail Live Reply</label>
    <type>TextArea</type>
</CustomField>