force-app/main/default/objects/Activity/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will controls the triggering of the chatter posts and task creations</description>
    <inlineHelpText>When checked, the meeting is shared and any Brand Actions (tasks) are created</inlineHelpText>
    <label>Share &amp; Post</label>
    <type>Checkbox</type>
</CustomField>