force-app/main/default/objects/Activity/fields/Share_Competitor_Report__c.field-meta.xml
<CustomField>
    <fullName>Share_Competitor_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share Competitor Report</label>
    <type>Checkbox</type>
</CustomField>