force-app/main/default/objects/Activity/fields/Time_to_Share__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Share__c</fullName>
    <description>Formula (days) to calculate the days between when the meeting took place and when it was shared</description>
    <formula>Date_Time_B2B_Posted__c -  ActivityDateTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How long (in days) between the meeting start time and when it was shared</inlineHelpText>
    <label>Time to Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>