force-app/main/default/objects/Activity/fields/Village_Activities__c.field-meta.xml
<CustomField>
    <fullName>Village_Activities__c</fullName>
    <description>Used to auto-create Re merchandising tasks.</description>
    <label>Village Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bicester - Amendment</fullName>
            </value>
            <value>
                <fullName>Bicester - Downsize</fullName>
            </value>
            <value>
                <fullName>Bicester - Follow Up Action</fullName>
            </value>
            <value>
                <fullName>Bicester - New Contract</fullName>
            </value>
            <value>
                <fullName>Bicester - Pop Up</fullName>
            </value>
            <value>
                <fullName>Bicester - Rebrand</fullName>
            </value>
            <value>
                <fullName>Bicester - Relocation</fullName>
            </value>
            <value>
                <fullName>Bicester - Renewal</fullName>
            </value>
            <value>
                <fullName>Bicester - Shop Refit</fullName>
            </value>
            <value>
                <fullName>Bicester - Termination</fullName>
            </value>
            <value>
                <fullName>Bicester - Upsize</fullName>
            </value>
            <value>
                <fullName>Bicester - More Storage</fullName>
            </value>
            <value>
                <fullName>Bicester - Same Space</fullName>
            </value>
            <value>
                <fullName>Bicester - Space Unknown</fullName>
            </value>
            <value>
                <fullName>Fidenza - Amendment</fullName>
            </value>
            <value>
                <fullName>Fidenza - Downsize</fullName>
            </value>
            <value>
                <fullName>Fidenza - Follow Up Action</fullName>
            </value>
            <value>
                <fullName>Fidenza - New Contract</fullName>
            </value>
            <value>
                <fullName>Fidenza - Pop Up</fullName>
            </value>
            <value>
                <fullName>Fidenza - Rebrand</fullName>
            </value>
            <value>
                <fullName>Fidenza - Relocation</fullName>
            </value>
            <value>
                <fullName>Fidenza - Renewal</fullName>
            </value>
            <value>
                <fullName>Fidenza - Shop Refit</fullName>
            </value>
            <value>
                <fullName>Fidenza - Termination</fullName>
            </value>
            <value>
                <fullName>Fidenza - Upsize</fullName>
            </value>
            <value>
                <fullName>Fidenza - More Storage</fullName>
            </value>
            <value>
                <fullName>Fidenza - Same Space</fullName>
            </value>
            <value>
                <fullName>Fidenza - Space Unknown</fullName>
            </value>
            <value>
                <fullName>Ingolstadt - Amendment</fullName>
            </value>
            <value>
                <fullName>Ingolstadt - Downsize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>