force-app/main/default/objects/Activity/fields/Villages_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Villages_Discussed__c</fullName>
    <label>Villages Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Belmont Park</fullName>
            </value>
            <value>
                <fullName>Bicester</fullName>
            </value>
            <value>
                <fullName>Fidenza</fullName>
            </value>
            <value>
                <fullName>Ingolstadt</fullName>
            </value>
            <value>
                <fullName>Kildare</fullName>
            </value>
            <value>
                <fullName>La Roca</fullName>
            </value>
            <value>
                <fullName>Las Rozas</fullName>
            </value>
            <value>
                <fullName>La Vallée</fullName>
            </value>
            <value>
                <fullName>Maasmechelen</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Suzhou</fullName>
            </value>
            <value>
                <fullName>Wertheim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>