force-app/main/default/objects/Activity/fields/VR_Materials_Given_To_Brand__c.field-meta.xml
<CustomField>
    <fullName>VR_Materials_Given_To_Brand__c</fullName>
    <label>VR Materials Given To Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand Presentation - Group</fullName>
            </value>
            <value>
                <fullName>Brand Presentation - GRS</fullName>
            </value>
            <value>
                <fullName>Brand Presentation - Bicester</fullName>
            </value>
            <value>
                <fullName>Brand Presentation - Fidenza</fullName>
            </value>
            <value>
                <fullName>Brand Presentation - Ingolstadt</fullName>
            </value>
            <value>
                <fullName>Brand Presentation - Kildare</fullName>
            </value>
            <value>
                <fullName>Brand Presentation - La Roca</fullName>
            </value>
            <value>
                <fullName>Brand Presentation - Las Rozas</fullName>
            </value>
            <value>
                <fullName>Brand Presentation - La Vallée</fullName>
            </value>
            <value>
                <fullName>Brand Presentation - Maasmechelen</fullName>
            </value>
            <value>
                <fullName>Brand Presentation - Suzhou</fullName>
            </value>
            <value>
                <fullName>Brand Presentation - Wertheim</fullName>
            </value>
            <value>
                <fullName>Chic Buzz Magazine</fullName>
            </value>
            <value>
                <fullName>Chic Guide to Europe</fullName>
            </value>
            <value>
                <fullName>Commercialisation Brochure</fullName>
            </value>
            <value>
                <fullName>Concepts in store Design</fullName>
            </value>
            <value>
                <fullName>Convincing Evidence</fullName>
            </value>
            <value>
                <fullName>Lease Book</fullName>
            </value>
            <value>
                <fullName>Marketing Campaign Presentation</fullName>
            </value>
            <value>
                <fullName>Press Articles</fullName>
            </value>
            <value>
                <fullName>Village One Pager - Bicester</fullName>
            </value>
            <value>
                <fullName>Village One Pager - Fidenza</fullName>
            </value>
            <value>
                <fullName>Village One Pager - Ingolstadt</fullName>
            </value>
            <value>
                <fullName>Village One Pager - Kildare</fullName>
            </value>
            <value>
                <fullName>Village One Pager - La Roca</fullName>
            </value>
            <value>
                <fullName>Village One Pager - Las Rozas</fullName>
            </value>
            <value>
                <fullName>Village One Pager - La Vallée</fullName>
            </value>
            <value>
                <fullName>Village One Pager - Maasmechelen</fullName>
            </value>
            <value>
                <fullName>Village One Pager - Suzhou</fullName>
            </value>
            <value>
                <fullName>Village One Pager - Wertheim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>