force-app/main/default/objects/Activity/listViews/All_Events.listView-meta.xml
<ListView>
    <fullName>All_Events</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>EVENT.START_DATE_TIME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Event_Department__c</columns>
    <columns>Reason__c</columns>
    <columns>Share__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Events</label>
    <language>en_US</language>
</ListView>